cluster/apps/chrisabel/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chrisabel
  namespace: default
  labels:
    kubernetes.io/ingress.class: traefik
  annotations:
    hajimari.io/appName: "chrisabel"
    hajimari.io/enable: "true"
    hajimari.io/icon: "account-network"
spec:
  rules:
    - host: chrisabel.love
      http:
        paths:
          - backend:
              service:
                name: chrisabel
                port:
                  name: http
            path: /
            pathType: Prefix
    - host: "chrisabel.home.lab"
      http:
        paths:
          - backend:
              service:
                name: chrisabel
                port:
                  name: http
            path: /
            pathType: Prefix
